# computer-vision

./: .gitignore  README.md
Projects/: CMakeLists.txt  Makefile
Projects/src/: ImagesProcessing.hpp  main.cpp
Projects/src/C++/: ImagesProcessing.hpp  functions.hpp  main.cpp
Projects/src/Python/: bgr2hsv.py  bone.py  canny.py  cut.py  fichas.py  filters.py  histogramas.py  kafka_perspective.py  morphology.py  operators.py  resize.py  sudoku_perspective.py
Projects/src/Python/Applications/: caracteres.py  centers_distance.py  colors.py  follow_red.py  formats.py
Projects/src/Python/CVZone/: biceps.py  face_detection.py  face_mesh.py  findContours.py  fps.py  hand_tracking.py  initial_examples.py  self_segmentation.py  trackbar.py
Projects/src/Python/CameraCalibration/: calibration.py  photos.py
Projects/src/Python/Extraction/: formats.py  holes.py  moments.py  puzzle.py  square_center.py  tampa.py  vertices.py
Projects/src/Python/Filters/: bone.py  canny.py  filters.py  laplacian_moon.py  operators.py
Projects/src/Python/HaarCascade/: selecao.py
Projects/src/Python/Histograms/: histogramas.py
Projects/src/Python/K-NN/: knn_classifier.py
Projects/src/Python/Morphology/: andromeda.py  bearing_morphology.py  gears_of_war.py  morph_gradient.py  morphology.py  open_close.py  plate.py  rice.py
Projects/src/Python/Perspective/: cube_perspective.py  kafka_perspective.py  sudoku_perspective.py
Projects/src/Python/Segmentation/: canny_coffee.py  chips_segmentation.py  colors_segmentation.py  normal_binary.py  otsu.py  pills.py  stream_segmentation.py  (+1 more)
